--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button class="btn reset">RESET</button>
+    <h1>Rock Paper Scissors</h1>
+
+    <div class="scores">
+      <h2>Score</h2>
+      <div class="score">Player score: <span class="player-score">0</span></div>
+      <div class="score">
+        Computer score: <span class="computer-score">0</span>
+      </div>
+    </div>
+
+    <div class="btns">
+      <button class="btn rock">ROCK</button>
+      <button class="btn paper">PAPER</button>
+      <button class="btn scissors">SCISSORS</button>
+    </div>
+
+    <div class="results">
+      <div class="result">You chose: <span class="user-choice"></span></div>
+      <div class="result">
+        The computer chose: <span class="computer-choice"></span>
+      </div>
+      <div class="result">
+        The winner of round: <span class="winner"></span>
+      </div>
+      <div class="result"><span class="final"></span></div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
