--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <button class="btn reset">RESET</button>
-    <h1>Rock Paper Scissors</h1>
+    <h1>Rock Paper Scissors game</h1>
 
     <div class="scores">
       <h2>Score</h2>
